<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:ns1="http://schemas.android.com/apk/res-auto">
    <string name="app_name">ProjectS</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="socket_1">Outlet 1 </string>
    <string name="socket_4">Outlet 4 </string>
    <string name="socket_3">Outlet 3 </string>
    <string name="socket_2">Outlet 2 </string>
    <string name="socket">outlet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="btnSkStatDescription">Status of the outlet. Click to show more information.</string>
    <string name="btnSkAlarmDescription">Alarm of the outlet. Click to show more information.</string>
    <string name="btnSkChartDescription">Current chart of the outlet. click to show more information.</string>
    <string name="turnOn">has been turned on.</string>
    <string name="turnOff">has been turned off.</string>
    <string name="intent_exit">Leave this page will stop the connection with Smart Outlet.</string>
    <string name="confirm">Confirm</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_bt">BTActivity</string>
    <string name="read_buffer"><![CDATA[<Read Buffer>]]></string>
    <string name="bluetooth_status"><![CDATA[<Bluetooth Status>]]></string>
    <string name="status">Status:</string>
    <string name="BTCrash">Bluetooth Error. Please make sure this device has Bluetooth support.</string>
    <string name="Bluetooth_is_already_on">Bluetooth is already on</string>
    <string name="Bluetooth_tuned_on">Bluetooth tuned on</string>
    <string name="Blank_test">
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n
        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n
        \n\n\n\n\n\n
        \n
        \n
        \n




        </string>
    <string name="cancel">Cancel</string>
    <string name="Change_Connection_Method_BT">Change Connection Method to Bluetooth.</string>
    <string name="Change_Connection_Method_WiFI">Change Connection Method to Wi-Fi.</string>
    <string name="socket_picture">Socket Picture</string>
    <string name="stop_bt_connect_to_wifi">Changing this will close the current bluetooth connection and establish a Wi-Fi connection instead.</string>
    <string name="stop_wifi_connect_to_bt">Changing this will close the current Wi-Fi connection and establish a bluetooth connection instead.</string>
    <string name="cancelled">Cancelled</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Bluetooth not\nconnected</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="current_description_good">The current is stable. This means the connecting device does not take too much power. If the current of this device increases strangely, please check it to prevent accidents happen.</string>
    <string name="current_description_off">This outlet is currently OFF. Open it to see the current status.</string>
    <string name="current_description_orange">The current now is in a high value, if the connecting device is a high power device (eg. microwave, hair dryer), please ignore this.</string>
    <string name="current_description_red">The power supply of the connecting device has been cut off because of extremely high current usage. You can clear the warning by press the "CLEAR" button.</string>
    <string name="current_description_auto">Auto mode have been turned on. If the Pyro-electric Infrared Detector(PIR) module is connected, outlet wil be turned on or turned off automatically.</string>
    <string name="title">Project: Socket</string>
    <string name="failed">Failed</string>
    <string name="connected_successfully">Connected successfully</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="developer_mode">Developer Mode</string>
    <string name="auto_mode_test">Auto Mode Test</string>
    <string name="notification_test">Notification Test</string>
    <string name="bt_developer_page">BT Developer Page</string>
    <string name="average_current">Average Current:</string>
    <string name="now_current">Now Current:</string>
    <string name="current_status">Current Status</string>
    <string name="good">Good</string>
    <string name="auto">Auto</string>
    <string name="socket_off">Socket not ON</string>
    <string name="socket_not_connected">Outlet not connected</string>
    <string name="hint_minute">Minute</string>
    <string name="message_minutes">Please Enter Minutes...</string>
    <string name="connecting_with_dots">Connecting...</string>
    <string name="orange">Warning</string>
    <string name="red">Caution</string>
    <string name="please_try_again_after_bt_enable">Please try again after bluetooth enabled.</string>
    <string name="current_chart">Current Chart</string>
    <string name="chart_description">This is the chart of the current. You can see recently current here.</string>
    <string name="now_power">Now Power:</string>
    <string name="gotoalarm"><![CDATA[< Alarm]]></string>
    <string name="finish">finish</string>
    <string name="not_set">not set</string>
    <string name="real_time_current_chart">Real-Time Current Chart</string>
    <string name="timer"><![CDATA[Timer >]]></string>
    <string name="database_chart"><![CDATA[Database chart >]]></string>
    <string name="action">Action</string>
    <string name="open_off">OPEN / OFF</string>
    <string name="safe_current_value">safe current value</string>
    <string name="login">Login</string>
    <string name="logged_description">Your preferences will be automatically save to the database on cloud. If you have any problem about your account, please contact us by the "Contact" button.</string>
    <string name="description_login">Please enter your Email and password to either Log In or Sign Up. If you have any problem about your account, please contact us by the "Contact" button.</string>
    <string name="password">Password</string>
    <string name="please_enter_the_name">Please enter a name</string>
    <string name="log_in_or_sign_up">Log In or Sign Up</string>
    <string name="device">Device</string>
    <string name="Are_you_sure_you_want_to_logout">Are you sure you want to log out?</string>
    <string name="turn_on_outlet">Turn on outlet:</string>
    <string name="log_in_successfully_by">Login successfully by</string>
    <string name="log_out">Log out</string>
    <string name="login_successfully">Login Successfully.</string>
    <string-array name="weeks">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="save_data_to_phone">Data have been saved.</string>
    <string name="login_fail_wrong_password">Log in failed. Wrong password.</string>
    <string name="log_in_fail">Log in failed</string>
    <string name="next_alarm_have_been_set_on">Next alarm have been set on</string>
    <string name="alarm_not_set">Alarm not set.</string>
    <string name="unable_to_check_app_version">Unable to check app version.</string>
    <string name="connected_to_db">Connected to database.</string>
    <string name="please_download_new_version">Please download the latest version from google drive.</string>
    <string name="latest_version">Latest version:</string>
    <string name="current_version">Current version:</string>
    <string name="find_a_new_version">New version found</string>
    <string name="because">Because</string>
    <string name="app_access_deny">Access deny.</string>
    <string name="system_info">System Message</string>
    <string name="data_load_fail">Fail to load data.</string>
    <string name="socket_current_warning">The outlet current is abnormal! Please check it now.</string>
    <string name="Security_warning">Caution</string>
    <string name="days_of_week_not_set">Days of week not set.</string>
    <string name="average">Average</string>
    <string name="current">Current</string>
    <string name="current_dev_mode">Current(Dev Mode)</string>
    <string name="turn_off_outlet">Turn off outlet:</string>
    <string name="days_of_week_have_been_set_to">Days of week have been set to</string>
    <string name="period_format">", "</string>
    <string name="setup_not_complete">Setup not complete</string>
    <string name="no_repeat">No repeat</string>
    <string name="please_select_days_of_week">Please select days of week.</string>
    <string name="date_format">E dd MM</string>
    <string name="alarm_had_been_on">Timing outlet has been set.</string>
    <string name="password_must_be_at_least_6_characters">Password must be at least 6 characters.</string>
    <string name="please_enter_a_valid_email">Please enter a valid Email.</string>
    <string name="link">Update Link</string>
    <string name="alarm_have_been_set_to">Timing outlet have been set to</string>
    <string name="extra_settings">Extra settings</string>
    <string name="clear_warning">Clear abnormal current warning</string>
    <string name="clear">Clear</string>
    <string name="blue_storm_iii">Blue Storm III</string>
    <string name="the_abnormal_current_will_be_clear">The abnormal current warning will be cleared.</string>
    <string name="please_clear_abnormal_current_first">Please clear abnormal current warning first!</string>
    <string name="dismiss">DISMISS</string>
</resources>