<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.jerry960331.saihs_projects_2.MainActivity">
    <item
        android:id="@+id/action_login"
        android:title="LOGIN"
        android:capitalize="none"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bt"
        android:title="@string/bt_developer_page"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notification"
        android:title="@string/notification_test" />

    <item
        android:id="@+id/action_log"
        android:checkable="true"
        android:title="LOG" />
    <item
        android:id="@+id/action_devData"
        android:checkable="true"
        android:title="Dev Mode Data" />
    <item
        android:id="@+id/action_dev"
        android:checkable="true"
        android:title="@string/developer_mode" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_statOnCloud"
        android:checkable="true"
        android:title="Status on Cloud" />
    <item
        android:id="@+id/action_destroy"
        android:title="Restart App" />
</menu>
