<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.jerry960331.saihs_projects_2.MainActivity">

    <Button
        android:id="@+id/btnGotoDatabase"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_auto"
        android:text="@string/database_chart"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/real_time_current_chart"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/currentChartRT"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txChartAvCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="平均電流：initializing" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chart_description" />
    </LinearLayout>


</LinearLayout>