<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableEnd="@drawable/icon_pencil"
        android:drawablePadding="10dp"
        android:text="Example Name"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="example@email.com"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txUserDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/icon_pencil"
                android:drawablePadding="5dp"
                android:text="example"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logged_description"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="72dp"
        android:layout_height="34dp"
        android:layout_gravity="end"
        android:background="@drawable/button_red"
        android:text="@string/log_out"
        android:textColor="#F44336" />
</LinearLayout>